hphp/test/zend/good/ext/intl/tests/intl_icu_data_version_constant.php
<?php
var_dump(defined("INTL_ICU_DATA_VERSION"));
?>